--- a/src/HomePage/Homepage.fxml
+++ b/src/HomePage/Homepage.fxml
@@ -16,8 +16,8 @@
    <children>
       <AnchorPane fx:id="mainshow" layoutX="170.0" layoutY="-1.0" prefHeight="692.0" prefWidth="1111.0" stylesheets="@Homepage.css">
          <children>
-            <TextField fx:id="searchinput" layoutX="423.0" layoutY="22.0" prefHeight="25.0" prefWidth="244.0" promptText="Search" />
-            <Button layoutX="693.0" layoutY="20.0" mnemonicParsing="false" onAction="#ToSearch" text="Cari" />
+            <TextField fx:id="searchinput" layoutX="423.0" layoutY="14.0" prefHeight="34.0" prefWidth="244.0" promptText="Get ur food here....." />
+            <Button layoutX="667.0" layoutY="14.0" mnemonicParsing="false" onAction="#ToSearch" prefHeight="33.0" prefWidth="63.0" style="-fx-cursor: hand;" text="Search" textFill="#1b0505" />
             <AnchorPane fx:id="mainshowbot" layoutY="65.0" prefHeight="636.0" prefWidth="1109.0">
                <children>
                   <ScrollPane hbarPolicy="NEVER" prefHeight="632.0" prefWidth="899.0" style="-fx-background-color: white;">
@@ -86,7 +86,7 @@
                   </ScrollPane>
                </children>
             </AnchorPane>
-            <Button fx:id="buttonback" layoutX="20.0" layoutY="20.0" mnemonicParsing="false" onAction="#Toback" text="&lt;-" visible="false" />
+            <Button fx:id="buttonback" layoutX="19.0" layoutY="20.0" mnemonicParsing="false" onAction="#Toback" prefHeight="28.0" prefWidth="42.0" style="-fx-border-color: black;" styleClass="backbutton" stylesheets="@Homepage.css" visible="false" />
          </children></AnchorPane>
       <VBox layoutX="-2.0" layoutY="-1.0" prefHeight="702.0" prefWidth="172.0" spacing="20.0" styleClass="Sidebar" stylesheets="@Homepage.css">
          <children>
