--- a/src/HomePage/myproduct.fxml
+++ b/src/HomePage/myproduct.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1111.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomePage.myproduct">
+<AnchorPane fx:id="mainmyproduct" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1111.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomePage.myproduct">
    <children>
       <ScrollPane layoutY="72.0" prefHeight="621.0" prefWidth="1109.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1544.0" prefWidth="1093.0">
                <children>
-                  <GridPane fx:id="showmyproduct" hgap="20.0" layoutX="16.0" prefHeight="1537.0" prefWidth="1073.0" vgap="20.0">
+                  <GridPane fx:id="showmyproduct" hgap="20.0" layoutX="16.0" onMouseClicked="#handleGridClick" prefHeight="1537.0" prefWidth="1073.0" vgap="20.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
