--- a/src/HomePage/searchview.fxml
+++ b/src/HomePage/searchview.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="mainshowsearch" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomePage.search">
    <children>
@@ -31,5 +33,10 @@
             </AnchorPane>
         </content>
       </ScrollPane>
+      <Label fx:id="showwarnzero" alignment="CENTER" layoutY="112.0" prefHeight="70.0" prefWidth="1107.0" text="^v^ Maaf Barang Yang Anda Cari Belum Tersedia ^v^">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
