--- a/src/PageAddbarang/Addbarang.fxml
+++ b/src/PageAddbarang/Addbarang.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1111.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PageAddbarang.Addbarang">
    <children>
-      <Label layoutX="402.0" layoutY="8.0" prefHeight="43.0" prefWidth="322.0" text="Let’s Create Your Products">
+      <Label fx:id="labelshow" alignment="CENTER" layoutX="1.0" layoutY="8.0" prefHeight="43.0" prefWidth="1111.0" text="Let’s Create Your Products">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
@@ -34,7 +34,7 @@
          </font>
       </Label>
       <TextField fx:id="namaproduct" layoutX="655.0" layoutY="110.0" prefHeight="39.0" prefWidth="364.0" />
-      <Label layoutX="81.0" layoutY="352.0" prefHeight="27.0" prefWidth="171.0" text="Expire Date">
+      <Label layoutX="81.0" layoutY="337.0" prefHeight="27.0" prefWidth="171.0" text="Expire Date">
          <font>
             <Font size="18.0" />
          </font>
@@ -50,20 +50,23 @@
          </font>
       </Label>
       <TextField fx:id="kuantitasbarang" layoutX="86.0" layoutY="591.0" prefHeight="25.0" prefWidth="279.0" />
-      <Button layoutX="419.0" layoutY="638.0" mnemonicParsing="false" onAction="#TambahProduct" prefHeight="44.0" prefWidth="321.0" text="Add Product" />
-      <Label layoutX="666.0" layoutY="347.0" prefHeight="27.0" prefWidth="171.0" text="Add Picture">
+      <Label layoutX="666.0" layoutY="336.0" prefHeight="27.0" prefWidth="171.0" text="Add Picture">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="pathpict" disable="true" layoutX="670.0" layoutY="385.0" prefHeight="25.0" prefWidth="279.0" />
+      <TextField fx:id="pathpict" disable="true" layoutX="670.0" layoutY="365.0" prefHeight="25.0" prefWidth="279.0" />
       <ChoiceBox fx:id="categorieschoice" layoutX="74.0" layoutY="111.0" prefHeight="40.0" prefWidth="293.0" />
-      <Button layoutX="953.0" layoutY="383.0" mnemonicParsing="false" onAction="#handleChooseImage" text="+" />
-      <ImageView fx:id="previewpict" fitHeight="201.0" fitWidth="312.0" layoutX="668.0" layoutY="414.0" pickOnBounds="true" preserveRatio="true" />
-      <DatePicker fx:id="dateproduct" layoutX="87.0" layoutY="385.0" prefWidth="279.0" />
+      <Button layoutX="953.0" layoutY="365.0" mnemonicParsing="false" onAction="#handleChooseImage" text="+" />
+      <ImageView fx:id="previewpict" fitHeight="201.0" fitWidth="312.0" layoutX="668.0" layoutY="394.0" pickOnBounds="true" preserveRatio="true" />
+      <DatePicker fx:id="dateproduct" layoutX="84.0" layoutY="382.0" prefWidth="279.0" />
       <CheckBox fx:id="cekjne" layoutX="88.0" layoutY="497.0" mnemonicParsing="false" text="JNE" />
       <CheckBox fx:id="cekjnt" layoutX="181.0" layoutY="497.0" mnemonicParsing="false" text="J&amp;T" />
       <CheckBox fx:id="cekpickup" layoutX="274.0" layoutY="497.0" mnemonicParsing="false" text="Pick Up" />
       <TextArea fx:id="deskripsiproduk" layoutX="77.0" layoutY="218.0" prefHeight="101.0" prefWidth="996.0" wrapText="true" />
+      <Button fx:id="updateprodukbut" layoutX="664.0" layoutY="621.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="182.0" text="Update Product" visible="false" />
+      <Button fx:id="deleteprodukbut" layoutX="862.0" layoutY="620.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="182.0" text="Delete Product" visible="false" />
+      <Button fx:id="addproductbut" layoutX="665.0" layoutY="621.0" mnemonicParsing="false" onAction="#TambahProduct" prefHeight="44.0" prefWidth="321.0" text="Add Product" />
+      <Button fx:id="backbut" layoutX="26.0" layoutY="17.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="67.0" text="Back" visible="false" />
    </children>
 </AnchorPane>
