--- a/src/MyProfile/Myprofile.fxml
+++ b/src/MyProfile/Myprofile.fxml
@@ -17,9 +17,9 @@
    <children>
       <AnchorPane layoutX="-1.0" maxHeight="690.0" maxWidth="1109.0" prefHeight="690.0" prefWidth="1109.0" style="-fx-background-color: D9D9D9; -fx-background-radius: 20;" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView blendMode="MULTIPLY" fitHeight="440.0" fitWidth="1134.0" layoutY="-126.0" pickOnBounds="true">
+            <ImageView blendMode="MULTIPLY" fitHeight="443.0" fitWidth="1134.0" layoutY="-126.0" pickOnBounds="true">
                <image>
-                  <Image url="@backgroundup2.png" />
+                  <Image url="@backback.jpeg" />
                </image>
             </ImageView>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f6f6f6" height="106.0" layoutX="-72.0" layoutY="212.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1205.0" />
