--- a/src/Login/Scene1.fxml
+++ b/src/Login/Scene1.fxml
@@ -37,7 +37,7 @@
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font></Button>
-                        <Button layoutX="82.0" layoutY="124.0" mnemonicParsing="false" onAction="#ChoosesignupSeller" prefHeight="49.0" prefWidth="183.0" styleClass="buttonchosesignas" stylesheets="@CssLogin.css" text="Perusahaan" textFill="WHITE">
+                        <Button layoutX="82.0" layoutY="124.0" mnemonicParsing="false" onAction="#ChoosesignupSeller" prefHeight="49.0" prefWidth="183.0" styleClass="buttonchosesignas" stylesheets="@CssLogin.css" text="Supplier" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font></Button>
